# opengl-cuda

./: .gitignore  CMakeLists.txt  MainCuda.h  MainOpenGL.cpp  Makefile  OldMakefile123  main.cpp  main_cu.cu  test_extra.cpp
shaders/: kernel_funcs.glsl  single_color_fs.glsl  single_color_vs.glsl  texture_fs.glsl  texture_vs.glsl
src/: CudaKernelUtils.cu  CudaUtils.cu  Drawable.cpp  FileReader.cpp  Framebuffer.cpp  MainCuda.cu  MainOpenGL.cpp  ObjDecoder.cpp  Quad.cpp  Shader.cpp  Texture.cpp  Utils.cpp  bvh_classes.cpp  cuda_allocation_utils.cpp  cuda_classes.cpp  cuda_helper_utils.cpp  main.cpp
src/headers/: CudaKernelUtils.cuh  CudaUtils.cuh  Drawable.h  FileReader.h  Framebuffer.h  MainCuda.cuh  MainCuda.h  MainOpenGL.h  ObjDecoder.h  Quad.h  Shader.h  ShaderConst.h  Texture.h  Utils.h  bvh_classes.h  cuda_allocation_utils.h  cuda_classes.h  cuda_helper_utils.h  stb_image.h
test/: CMakeLists.txt  test_extra.cpp
